# Certification-Thomas-DINH

./: .dockerignore  .env-example  .pre-commit-config.yaml  Dockerfile  Dockerfile.streamlit  ETAPES-DU-PROJET.md  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.api.txt  requirements.dashboard.txt  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml
.streamlit/: config.toml
notebooks/: Thomas_Distilbert.ipynb  Thomas_XGBoost.ipynb  Thomas_download.ipynb  Thomas_log_reg.ipynb  Thomas_mental_roberta.ipynb  Thomas_mental_roberta_base.ipynb  XGBoost.ipynb  distilbert.ipynb  download.ipynb  full_pipeline.ipynb  log_reg.ipynb  mental_roberta.ipynb
ops/monitoring/: non_fr_en_streamlit_alert_policy.json  non_fr_en_streamlit_metric.yaml
src/api/: database.py  main.py  schemas.py  services.py
src/config/: config.py
src/dashboard/: about.py  app.py  pages.py
src/data_cleaning/: balance_classes.py  clean_data.py  download_data.py
src/pipeline/: run_full_pipeline.py
src/training/: predict.py  preprocess.py  train.py
tests/: conftest.py
tests/api/: conftest.py  test_api.py
tests/dashboard/: test_dashboard.py
tests/data_cleaning/: test_balance_classes.py  test_clean_data.py  test_download_data.py
tests/pipeline/: test_run_full_pipeline.py
tests/training/: test_predict.py  test_train.py
