[project]
name = "certification"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Dinh",email = "th_dinh@yahoo.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.9,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D101", "D102", "D103"]  # pycodestyle, pyflakes, isort
